<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".MainActivity">

    <EditText
        android:onClick="field1"
        android:id="@+id/firstname"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAppearance="@style/Widget.AppCompat.EditText"
        android:textColor="@color/black"
        android:textColorHint="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:onClick="field2"
        android:id="@+id/crushname"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:hint="@string/crushname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAppearance="@style/Widget.AppCompat.EditText"
        android:textColor="@color/black"
        android:textColorHint="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname" />

    <Button
        android:id="@+id/start"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="178dp"
        android:layout_height="59dp"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginEnd="126dp"
        android:layout_marginRight="126dp"
        android:layout_marginBottom="52dp"
        android:background="#FFFFFF"
        android:onClick="start"
        android:text="@string/startbutton"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crushname"
        app:layout_constraintVertical_bias="0.996" />

</androidx.constraintlayout.widget.ConstraintLayout>